Fixed footer on IE

--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -27,6 +27,10 @@
 		width: 100%;
 	}
 
+	input::-ms-clear {
+		display: none;
+	}
+
 	&:focus {
 		outline: none;
 	}
