--- a/deploy/htdocs/version/src/inc/style/component/_footer.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_footer.scss
@@ -3,12 +3,12 @@
 	padding: 0 $sizeGrid * 3;
 	background: $colorPrimary;
 
+	// IE 11 does not like flex space-between, so float instead
 	.top-section {
 		@include size(100%, auto);
 		padding: $sizeGrid * 2 0;
-		display: flex;
-		justify-content: space-between;
-		position: relative;
+		display: block;
+		overflow: hidden;
 
 		&:after {
 			@include size(100%, 1px);
@@ -17,6 +17,14 @@
 			position: absolute;
 			content: '';
 			background: rgba($colorWhite, .1);
+		}
+
+		.logo {
+			float: left;
+		}
+
+		.contact-options {
+			float: right;
 		}
 	}
 
